fixed navbar on mobile and started with contact page

--- a/css/styles.css
+++ b/css/styles.css
@@ -105,7 +105,7 @@ nav .fa-solid{
         display: block;
     }
     .nav-links{
-        position: absolute;
+        position: fixed;
         background: #3d3d23;
         height: 100vh;
         width: 200px;
@@ -377,4 +377,51 @@ a {
         font-size: 18px;
         gap: 2rem;
     }
+}
+.location {
+     width: 80%;
+    margin: auto;
+    padding: 80px 0;
+}
+.location iframe{
+    width: 100%;
+}
+.contact-us{
+    width: 80%;
+    margin: auto;
+}
+.contact-col{
+    flex-basis: 48%;
+    margin-bottom: 40px;
+    margin-top: 50px;
+}
+.contact-col div{
+    display: flex;
+    align-items: center;
+    margin-bottom: 40%;
+}
+.contact-col div .fa{
+    font-size: 28px;
+    color: #3d3d23;
+    gap: 10px;
+    margin-right: 30px;
+}
+.contact-col div p{
+    padding: 0;
+    
+}
+.contact-col div h5{
+    font-size: 20px;
+    margin-bottom: 5px;
+    color: #555;
+    font-weight: 400;
+
+}
+.contact-col input, .contact-col textarea{
+    width: 100%;
+    padding: 15px;
+    margin-bottom: 18px;
+    outline: none;
+    border: 1px solid #ccc;
+    box-sizing: border-box;
 }
